--- a/index.html
+++ b/index.html
@@ -18,39 +18,29 @@
     }
     .brand-header {
       background: linear-gradient(135deg, var(--vitrina-red) 0%, #c82519 100%);
-      color: white;
-      padding: 2rem 0;
-      text-align: center;
+      color: white; padding: 2rem 0; text-align: center;
       box-shadow: 0 4px 20px rgba(229,48,37,.3);
     }
     .brand-header .logo-header {
-      max-width: 120px;
-      margin-bottom: 1rem;
+      max-width: 120px; margin-bottom: 1rem;
     }
     .brand-logo {
-      font-size: 2.5rem;
-      font-weight: bold;
+      font-size: 2.5rem; font-weight: bold;
       text-shadow: 2px 2px 4px rgba(0,0,0,.3);
     }
     .card {
-      border: none;
-      border-radius: 20px;
+      border: none; border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,.1);
-      backdrop-filter: blur(10px);
-      background: rgba(255,255,255,.95);
+      backdrop-filter: blur(10px); background: rgba(255,255,255,.95);
     }
     .card-header {
-      background: var(--vitrina-dark);
-      color: white;
-      border-radius: 20px 20px 0 0 !important;
-      padding: 1.5rem;
+      background: var(--vitrina-dark); color: white;
+      border-radius: 20px 20px 0 0 !important; padding: 1.5rem;
     }
     .form-label { color: var(--vitrina-dark); font-weight: 600; }
     .form-control, .form-select {
-      border: 2px solid #e9ecef;
-      border-radius: 12px;
-      padding: .75rem 1rem;
-      transition: all .3s;
+      border: 2px solid #e9ecef; border-radius: 12px;
+      padding: .75rem 1rem; transition: all .3s;
     }
     .form-control:focus, .form-select:focus {
       border-color: var(--vitrina-red);
@@ -58,71 +48,47 @@
     }
     .btn-calculate {
       background: linear-gradient(135deg, var(--vitrina-red) 0%, #c82519 100%);
-      color: white;
-      border: none;
-      border-radius: 12px;
-      padding: 1rem 2rem;
-      font-weight: bold;
-      text-transform: uppercase;
+      color: white; border: none; border-radius: 12px;
+      padding: 1rem 2rem; font-weight: bold; text-transform: uppercase;
     }
     .btn-calculate:hover {
       transform: translateY(-2px);
       box-shadow: 0 8px 25px rgba(229,48,37,.4);
     }
     .btn-reset {
-      background: #f0f0f0;
-      color: #000;
-      border: none;
-      border-radius: 12px;
-      padding: 1rem 2rem;
-      font-weight: bold;
+      background: #f0f0f0; color: #000; border: none;
+      border-radius: 12px; padding: 1rem 2rem; font-weight: bold;
     }
     .btn-reset:hover {
-      background: #e0e0e0;
-      transform: translateY(-2px);
+      background: #e0e0e0; transform: translateY(-2px);
     }
     .result-card {
       background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
-      color: white;
-      border-radius: 15px;
-      padding: 2rem;
-      margin-top: 2rem;
-      box-shadow: 0 8px 25px rgba(40,167,69,.3);
+      color: white; border-radius: 15px; padding: 2rem;
+      margin-top: 2rem; box-shadow: 0 8px 25px rgba(40,167,69,.3);
     }
     .result-item {
-      display: flex;
-      justify-content: space-between;
-      padding: .5rem 0;
-      border-bottom: 1px solid rgba(255,255,255,.2);
+      display: flex; justify-content: space-between;
+      padding: .5rem 0; border-bottom: 1px solid rgba(255,255,255,.2);
     }
     .result-item:last-child {
-      border: none;
-      margin-top: 1rem;
-      font-size: 1.3rem;
-      font-weight: bold;
+      border: none; margin-top: 1rem;
+      font-size: 1.3rem; font-weight: bold;
     }
-    .currency {
-      font-family: 'Courier New', monospace;
-      font-weight: bold;
-    }
+    .currency { font-family: 'Courier New', monospace; font-weight: bold; }
     .icon-container {
-      background: rgba(255,255,255,.1);
-      border-radius: 50%;
-      width: 50px; height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background: rgba(255,255,255,.1); border-radius: 50%;
+      width: 50px; height: 50px; display: flex;
+      align-items: center; justify-content: center;
       margin: 0 auto 1rem;
     }
     .input-group-text {
-      background: var(--vitrina-red);
-      color: white;
+      background: var(--vitrina-red); color: white;
       border: 2px solid var(--vitrina-red);
       border-radius: 12px 0 0 12px;
     }
     .input-group .form-control {
-      border-left: none;
-      border-radius: 0 12px 12px 0;
+      border-left: none; border-radius: 0 12px 12px 0;
     }
   </style>
 </head>
@@ -243,54 +209,51 @@
   </div>
 
   <footer class="text-center py-4" style="background: var(--vitrina-dark); color: white;">
-    <div class="container">
-      <p class="mb-0">&copy; 2025 Vitrina Inc. Todos los derechos reservados.</p>
-    </div>
+    <div class="container"><p class="mb-0">&copy; 2025 Vitrina Inc.</p></div>
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script>
-    // 1) TRM mutable, con fallback
-    let TRM = 4100;
+    let TRM = 0; // arranca en 0, luego sobreescribe con la API
 
-    // 2) Carga JSON antes de mostrar
     async function cargarTRM() {
       try {
-        const res  = await fetch('trm.json');
+        const res = await fetch('https://api.exchangerate.host/latest?base=USD&symbols=COP');
         if (!res.ok) throw new Error(res.status);
-        const data = await res.json();
-        TRM = data.trm;
-        document.getElementById('trmValue').textContent = TRM.toLocaleString('es-CO');
-      } catch (err) {
-        console.error('Error cargando trm.json:', err);
+        const json = await res.json();
+        TRM = json.rates.COP;
+      } catch (e) {
+        console.error('Error obteniendo TRM:', e);
+        TRM = 4100; // fallback razonable
       }
+      document.getElementById('trmValue').textContent = TRM.toLocaleString('es-CO');
     }
 
     let currentTipo = 'COP';
 
     function cambiarMoneda() {
       const newTipo = document.getElementById('tipoMoneda').value;
-      const brutoInput = document.getElementById('costoBruto');
-      let val = parseFloat(brutoInput.value) || 0;
+      const input = document.getElementById('costoBruto');
+      let val = parseFloat(input.value) || 0;
 
       if (val > 0 && newTipo !== currentTipo) {
         if (currentTipo === 'COP' && newTipo === 'USD') {
           val = val / TRM;
-          brutoInput.step = '0.01';
-          brutoInput.value = val.toFixed(2);
+          input.step = '0.01';
+          input.value = val.toFixed(2);
         } else if (currentTipo === 'USD' && newTipo === 'COP') {
           val = val * TRM;
-          brutoInput.step = '1';
-          brutoInput.value = Math.round(val);
+          input.step = '1';
+          input.value = Math.round(val);
         }
       }
 
       document.getElementById('simboloMoneda').textContent = '$';
-      document.getElementById('codigoMoneda').textContent  = newTipo;
-      document.getElementById('trmInfo').style.display     = newTipo==='USD' ? 'block' : 'none';
-      document.getElementById('conversionEnVivo').style.display = newTipo==='USD' ? 'block' : 'none';
+      document.getElementById('codigoMoneda').textContent = newTipo;
+      document.getElementById('trmInfo').style.display = newTipo === 'USD' ? 'block' : 'none';
+      document.getElementById('conversionEnVivo').style.display = newTipo === 'USD' ? 'block' : 'none';
       document.getElementById('textoAyuda').textContent =
-        newTipo==='USD'
+        newTipo === 'USD'
           ? 'Ingrese el costo en dólares (se convertirá al calcular)'
           : 'Ingrese el costo en pesos';
 
@@ -300,22 +263,22 @@
     document.getElementById('costoBruto').addEventListener('input', function() {
       const v = parseFloat(this.value) || 0;
       document.getElementById('valorConvertido').textContent =
-        (currentTipo==='USD' && v>0)
-          ? (v * TRM).toLocaleString('es-CO', {minimumFractionDigits:0})
+        currentTipo === 'USD' && v > 0
+          ? (v * TRM).toLocaleString('es-CO', { minimumFractionDigits: 0 })
           : '0';
     });
 
     function calcularPrecio() {
       const brutoIn = parseFloat(document.getElementById('costoBruto').value);
-      const pct     = parseInt(document.getElementById('rentabilidad').value);
+      const pct = parseInt(document.getElementById('rentabilidad').value);
       if (!brutoIn || !pct) return alert('Complete todos los campos.');
-      if (brutoIn <= 0)    return alert('El costo debe ser > 0.');
+      if (brutoIn <= 0) return alert('El costo debe ser > 0.');
 
-      const brutoCOP = currentTipo==='USD' ? brutoIn*TRM : brutoIn;
-      const renta    = brutoCOP*(pct/100);
-      const empaq    = 800;
-      const pub      = brutoCOP*0.02;
-      const final    = brutoCOP + renta + empaq + pub;
+      const brutoCOP = currentTipo === 'USD' ? brutoIn * TRM : brutoIn;
+      const renta = brutoCOP * (pct / 100);
+      const empaq = 800;
+      const pub = brutoCOP * 0.02;
+      const final = brutoCOP + renta + empaq + pub;
 
       document.getElementById('mostrarCostoBruto').textContent =
         `$${brutoCOP.toLocaleString('es-CO')} COP`;
@@ -328,7 +291,7 @@
         `$${final.toLocaleString('es-CO')} COP`;
 
       const fila = document.getElementById('filaConversion');
-      if (currentTipo==='USD') {
+      if (currentTipo === 'USD') {
         document.getElementById('mostrarCostoUSD').textContent =
           `$${brutoIn.toLocaleString('es-CO')} USD`;
         fila.style.display = 'flex';
@@ -342,10 +305,10 @@
     function resetForm() {
       document.getElementById('costoBruto').value = '';
       document.getElementById('rentabilidad').value = '';
-      document.getElementById('resultados').style.display     = 'none';
-      document.getElementById('trmInfo').style.display        = 'none';
+      document.getElementById('resultados').style.display = 'none';
+      document.getElementById('trmInfo').style.display = 'none';
       document.getElementById('conversionEnVivo').style.display = 'none';
-      document.getElementById('valorConvertido').textContent   = '0';
+      document.getElementById('valorConvertido').textContent = '0';
       document.getElementById('tipoMoneda').value = 'COP';
       cambiarMoneda();
     }
