--- a/index.html
+++ b/index.html
@@ -18,39 +18,29 @@
     }
     .brand-header {
       background: linear-gradient(135deg, var(--vitrina-red) 0%, #c82519 100%);
-      color: white;
-      padding: 2rem 0;
-      text-align: center;
+      color: white; padding: 2rem 0; text-align: center;
       box-shadow: 0 4px 20px rgba(229,48,37,.3);
     }
     .brand-header .logo-header {
-      max-width: 120px;
-      margin-bottom: 1rem;
+      max-width: 120px; margin-bottom: 1rem;
     }
     .brand-logo {
-      font-size: 2.5rem;
-      font-weight: bold;
+      font-size: 2.5rem; font-weight: bold;
       text-shadow: 2px 2px 4px rgba(0,0,0,.3);
     }
     .card {
-      border: none;
-      border-radius: 20px;
+      border: none; border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,.1);
-      backdrop-filter: blur(10px);
-      background: rgba(255,255,255,.95);
+      backdrop-filter: blur(10px); background: rgba(255,255,255,.95);
     }
     .card-header {
-      background: var(--vitrina-dark);
-      color: white;
-      border-radius: 20px 20px 0 0 !important;
-      padding: 1.5rem;
+      background: var(--vitrina-dark); color: white;
+      border-radius: 20px 20px 0 0 !important; padding: 1.5rem;
     }
     .form-label { color: var(--vitrina-dark); font-weight: 600; }
     .form-control, .form-select {
-      border: 2px solid #e9ecef;
-      border-radius: 12px;
-      padding: .75rem 1rem;
-      transition: all .3s;
+      border: 2px solid #e9ecef; border-radius: 12px;
+      padding: .75rem 1rem; transition: all .3s;
     }
     .form-control:focus, .form-select:focus {
       border-color: var(--vitrina-red);
@@ -58,68 +48,44 @@
     }
     .btn-calculate {
       background: linear-gradient(135deg, var(--vitrina-red) 0%, #c82519 100%);
-      color: white;
-      border: none;
-      border-radius: 12px;
-      padding: 1rem 2rem;
-      font-weight: bold;
-      text-transform: uppercase;
+      color: white; border: none; border-radius: 12px;
+      padding: 1rem 2rem; font-weight: bold; text-transform: uppercase;
     }
     .btn-calculate:hover {
       transform: translateY(-2px);
       box-shadow: 0 8px 25px rgba(229,48,37,.4);
     }
     .btn-reset {
-      background: #f0f0f0;
-      color: #000;
-      border: none;
-      border-radius: 12px;
-      padding: 1rem 2rem;
-      font-weight: bold;
+      background: #f0f0f0; color: #000; border: none; border-radius: 12px;
+      padding: 1rem 2rem; font-weight: bold;
     }
     .btn-reset:hover {
-      background: #e0e0e0;
-      transform: translateY(-2px);
+      background: #e0e0e0; transform: translateY(-2px);
     }
     .result-card {
       background: linear-gradient(135deg, #28a745 0%, #20c997 100%);
-      color: white;
-      border-radius: 15px;
-      padding: 2rem;
-      margin-top: 2rem;
+      color: white; border-radius: 15px; padding: 2rem; margin-top: 2rem;
       box-shadow: 0 8px 25px rgba(40,167,69,.3);
     }
     .result-item {
-      display: flex;
-      justify-content: space-between;
-      padding: .5rem 0;
-      border-bottom: 1px solid rgba(255,255,255,.2);
+      display: flex; justify-content: space-between;
+      padding: .5rem 0; border-bottom: 1px solid rgba(255,255,255,.2);
     }
     .result-item:last-child {
-      border: none;
-      margin-top: 1rem;
-      font-size: 1.3rem;
-      font-weight: bold;
+      border: none; margin-top: 1rem; font-size: 1.3rem; font-weight: bold;
     }
     .currency { font-family: 'Courier New', monospace; font-weight: bold; }
     .icon-container {
-      background: rgba(255,255,255,.1);
-      border-radius: 50%;
-      width: 50px; height: 50px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto 1rem;
+      background: rgba(255,255,255,.1); border-radius: 50%;
+      width: 50px; height: 50px; display: flex;
+      align-items: center; justify-content: center; margin: 0 auto 1rem;
     }
     .input-group-text {
-      background: var(--vitrina-red);
-      color: white;
-      border: 2px solid var(--vitrina-red);
-      border-radius: 12px 0 0 12px;
+      background: var(--vitrina-red); color: white;
+      border: 2px solid var(--vitrina-red); border-radius: 12px 0 0 12px;
     }
     .input-group .form-control {
-      border-left: none;
-      border-radius: 0 12px 12px 0;
+      border-left: none; border-radius: 0 12px 12px 0;
     }
   </style>
 </head>
@@ -132,111 +98,108 @@
   </header>
 
   <div class="container my-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <div class="card">
-          <div class="card-header text-center">
-            <h3><i class="fas fa-calculator me-2"></i>Calcular Precio Final</h3>
+    <div class="row justify-content-center"><div class="col-lg-8">
+      <div class="card">
+        <div class="card-header text-center">
+          <h3><i class="fas fa-calculator me-2"></i>Calcular Precio Final</h3>
+        </div>
+        <div class="card-body p-4">
+          <div class="mb-4">
+            <label for="tipoMoneda" class="form-label">
+              <i class="fas fa-coins me-2 text-danger"></i>Tipo de Moneda
+            </label>
+            <select id="tipoMoneda" class="form-select" onchange="cambiarMoneda()">
+              <option value="COP" selected>Pesos Colombianos (COP)</option>
+              <option value="USD">Dólares Americanos (USD)</option>
+            </select>
           </div>
-          <div class="card-body p-4">
 
-            <div class="mb-4">
-              <label for="tipoMoneda" class="form-label">
-                <i class="fas fa-coins me-2 text-danger"></i>Tipo de Moneda
-              </label>
-              <select id="tipoMoneda" class="form-select" onchange="cambiarMoneda()">
-                <option value="COP" selected>Pesos Colombianos (COP)</option>
-                <option value="USD">Dólares Americanos (USD)</option>
-              </select>
+          <div id="trmInfo" class="mb-4" style="display:none">
+            <div class="alert alert-info d-flex align-items-center">
+              <i class="fas fa-exchange-alt me-2"></i>
+              <div><strong>TRM:</strong> $<span id="trmValue">0,00</span> COP por USD</div>
             </div>
-
-            <div id="trmInfo" class="mb-4" style="display:none">
-              <div class="alert alert-info d-flex align-items-center">
-                <i class="fas fa-exchange-alt me-2"></i>
-                <div><strong>TRM:</strong> $<span id="trmValue">0</span> COP por USD</div>
-              </div>
-            </div>
-
-            <div class="mb-4">
-              <label for="costoBruto" class="form-label">
-                <i class="fas fa-dollar-sign me-2 text-danger"></i>Costo Bruto
-              </label>
-              <div class="input-group">
-                <span class="input-group-text" id="simboloMoneda">$</span>
-                <input type="number" id="costoBruto" class="form-control" min="0" step="1">
-                <span class="input-group-text" id="codigoMoneda">COP</span>
-              </div>
-              <div class="form-text" id="textoAyuda">Ingrese el costo base en pesos</div>
-              <div id="conversionEnVivo" class="mt-2" style="display:none">
-                <div class="alert alert-secondary py-2">
-                  <small><strong>Conversión a COP:</strong> $<span id="valorConvertido">0</span></small>
-                </div>
-              </div>
-            </div>
-
-            <div class="mb-4">
-              <label for="rentabilidad" class="form-label">
-                <i class="fas fa-percentage me-2 text-danger"></i>Rentabilidad
-              </label>
-              <select id="rentabilidad" class="form-select">
-                <option value="">Seleccione porcentaje</option>
-                <option value="30">30%</option><option value="35">35%</option>
-                <option value="40">40%</option><option value="45">45%</option>
-                <option value="50">50%</option><option value="55">55%</option>
-                <option value="60">60%</option>
-              </select>
-            </div>
-
-            <div class="row">
-              <div class="col-md-6 mb-3">
-                <button type="button" class="btn btn-calculate w-100" onclick="calcularPrecio()">
-                  <i class="fas fa-calculator me-2"></i>Calcular Precio
-                </button>
-              </div>
-              <div class="col-md-6 mb-3">
-                <button type="button" class="btn btn-reset w-100" onclick="resetForm()">
-                  <i class="fas fa-refresh me-2"></i>Limpiar
-                </button>
-              </div>
-            </div>
-
-            <div id="resultados" class="result-card fade-in" style="display:none">
-              <div class="text-center mb-3">
-                <div class="icon-container">
-                  <i class="fas fa-receipt text-white fa-2x"></i>
-                </div>
-                <h4>Desglose de Costos</h4>
-              </div>
-              <div class="result-item">
-                <span><i class="fas fa-box me-2"></i>Costo Bruto:</span>
-                <span class="currency" id="mostrarCostoBruto">$0 COP</span>
-              </div>
-              <div class="result-item" id="filaConversion" style="display:none">
-                <span><i class="fas fa-exchange-alt me-2"></i>Costo Original (USD):</span>
-                <span class="currency" id="mostrarCostoUSD">$0 USD</span>
-              </div>
-              <div class="result-item">
-                <span><i class="fas fa-chart-line me-2"></i>Rentabilidad (<span id="mostrarPorcentaje">0</span>%):</span>
-                <span class="currency" id="mostrarRentabilidad">$0 COP</span>
-              </div>
-              <div class="result-item">
-                <span><i class="fas fa-cube me-2"></i>Costo de Empaque:</span>
-                <span class="currency">$800 COP</span>
-              </div>
-              <div class="result-item">
-                <span><i class="fas fa-bullhorn me-2"></i>Publicidad (2%):</span>
-                <span class="currency" id="mostrarPublicidad">$0 COP</span>
-              </div>
-              <div class="result-item">
-                <span><i class="fas fa-tags me-2"></i><strong>PRECIO FINAL:</strong></span>
-                <span class="currency" id="precioFinal">$0 COP</span>
-              </div>
-            </div>
-
           </div>
+
+          <div class="mb-4">
+            <label for="costoBruto" class="form-label">
+              <i class="fas fa-dollar-sign me-2 text-danger"></i>Costo Bruto
+            </label>
+            <div class="input-group">
+              <span class="input-group-text" id="simboloMoneda">$</span>
+              <input type="number" id="costoBruto" class="form-control" min="0" step="0.01">
+              <span class="input-group-text" id="codigoMoneda">COP</span>
+            </div>
+            <div class="form-text" id="textoAyuda">Ingrese el costo base en pesos</div>
+            <div id="conversionEnVivo" class="mt-2" style="display:none">
+              <div class="alert alert-secondary py-2">
+                <small><strong>Conversión a COP:</strong> $<span id="valorConvertido">0,00</span></small>
+              </div>
+            </div>
+          </div>
+
+          <div class="mb-4">
+            <label for="rentabilidad" class="form-label">
+              <i class="fas fa-percentage me-2 text-danger"></i>Rentabilidad
+            </label>
+            <select id="rentabilidad" class="form-select">
+              <option value="">Seleccione porcentaje</option>
+              <option value="30">30%</option><option value="35">35%</option>
+              <option value="40">40%</option><option value="45">45%</option>
+              <option value="50">50%</option><option value="55">55%</option>
+              <option value="60">60%</option>
+            </select>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6 mb-3">
+              <button type="button" class="btn btn-calculate w-100" onclick="calcularPrecio()">
+                <i class="fas fa-calculator me-2"></i>Calcular Precio
+              </button>
+            </div>
+            <div class="col-md-6 mb-3">
+              <button type="button" class="btn btn-reset w-100" onclick="resetForm()">
+                <i class="fas fa-refresh me-2"></i>Limpiar
+              </button>
+            </div>
+          </div>
+
+          <div id="resultados" class="result-card fade-in" style="display:none">
+            <div class="text-center mb-3">
+              <div class="icon-container">
+                <i class="fas fa-receipt text-white fa-2x"></i>
+              </div>
+              <h4>Desglose de Costos</h4>
+            </div>
+            <div class="result-item">
+              <span><i class="fas fa-box me-2"></i>Costo Bruto:</span>
+              <span class="currency" id="mostrarCostoBruto">$0,00 COP</span>
+            </div>
+            <div class="result-item" id="filaConversion" style="display:none">
+              <span><i class="fas fa-exchange-alt me-2"></i>Costo Original (USD):</span>
+              <span class="currency" id="mostrarCostoUSD">$0,00 USD</span>
+            </div>
+            <div class="result-item">
+              <span><i class="fas fa-chart-line me-2"></i>Rentabilidad (<span id="mostrarPorcentaje">0</span>%):</span>
+              <span class="currency" id="mostrarRentabilidad">$0,00 COP</span>
+            </div>
+            <div class="result-item">
+              <span><i class="fas fa-cube me-2"></i>Costo de Empaque:</span>
+              <span class="currency">$800 COP</span>
+            </div>
+            <div class="result-item">
+              <span><i class="fas fa-bullhorn me-2"></i>Publicidad (2%):</span>
+              <span class="currency" id="mostrarPublicidad">$0,00 COP</span>
+            </div>
+            <div class="result-item">
+              <span><i class="fas fa-tags me-2"></i><strong>PRECIO FINAL:</strong></span>
+              <span class="currency" id="precioFinal">$0,00 COP</span>
+            </div>
+          </div>
+
         </div>
       </div>
-    </div>
+    </div></div>
   </div>
 
   <footer class="text-center py-4" style="background: var(--vitrina-dark); color: white;">
@@ -249,14 +212,18 @@
 
     async function cargarTRM() {
       try {
-        const res = await fetch('https://api.exchangerate.host/latest?base=USD&symbols=COP');
-        if (!res.ok) throw new Error(res.status);
-        const json = await res.json();
-        TRM = json.rates.COP;
-      } catch (e) {
-        console.error('Error obteniendo TRM:', e);
+        const res = await fetch(
+          'https://api.exchangerate.host/latest?base=USD&symbols=COP',
+          { cache: 'no-store' }
+        );
+        if (!res.ok) throw new Error(res.statusText);
+        const { rates } = await res.json();
+        TRM = rates.COP;
+      } catch (err) {
+        console.error('No se pudo obtener la TRM:', err);
       }
-      document.getElementById('trmValue').textContent = TRM.toLocaleString('es-CO');
+      document.getElementById('trmValue').textContent =
+        TRM.toLocaleString('es-CO', { minimumFractionDigits: 2, maximumFractionDigits: 2 });
     }
 
     let currentTipo = 'COP';
@@ -273,8 +240,8 @@
           input.value = val.toFixed(2);
         } else if (currentTipo === 'USD' && newTipo === 'COP') {
           val = val * TRM;
-          input.step = '1';
-          input.value = Math.round(val);
+          input.step = '0.01';
+          input.value = (Math.round(val*100)/100).toFixed(2);
         }
       }
 
@@ -294,8 +261,8 @@
       const v = parseFloat(this.value) || 0;
       document.getElementById('valorConvertido').textContent =
         currentTipo === 'USD' && v > 0
-          ? (v * TRM).toLocaleString('es-CO', { minimumFractionDigits: 0 })
-          : '0';
+          ? (v * TRM).toLocaleString('es-CO', { minimumFractionDigits: 2, maximumFractionDigits: 2 })
+          : '0,00';
     });
 
     function calcularPrecio() {
@@ -305,25 +272,25 @@
       if (brutoIn <= 0) return alert('El costo debe ser > 0.');
 
       const brutoCOP = currentTipo === 'USD' ? brutoIn * TRM : brutoIn;
-      const renta = brutoCOP * (pct / 100);
-      const empaq = 800;
-      const pub = brutoCOP * 0.02;
-      const final = brutoCOP + renta + empaq + pub;
+      const renta   = brutoCOP * (pct / 100);
+      const empaq   = 800;
+      const pub     = brutoCOP * 0.02;
+      const final   = brutoCOP + renta + empaq + pub;
 
       document.getElementById('mostrarCostoBruto').textContent =
-        `$${brutoCOP.toLocaleString('es-CO')} COP`;
+        `$${brutoCOP.toLocaleString('es-CO', { minimumFractionDigits: 2, maximumFractionDigits: 2 })} COP`;
       document.getElementById('mostrarPorcentaje').textContent = pct;
       document.getElementById('mostrarRentabilidad').textContent =
-        `$${renta.toLocaleString('es-CO')} COP`;
+        `$${renta.toLocaleString('es-CO', { minimumFractionDigits: 2, maximumFractionDigits: 2 })} COP`;
       document.getElementById('mostrarPublicidad').textContent =
-        `$${pub.toLocaleString('es-CO')} COP`;
+        `$${pub.toLocaleString('es-CO', { minimumFractionDigits: 2, maximumFractionDigits: 2 })} COP`;
       document.getElementById('precioFinal').textContent =
-        `$${final.toLocaleString('es-CO')} COP`;
+        `$${final.toLocaleString('es-CO', { minimumFractionDigits: 2, maximumFractionDigits: 2 })} COP`;
 
       const fila = document.getElementById('filaConversion');
       if (currentTipo === 'USD') {
         document.getElementById('mostrarCostoUSD').textContent =
-          `$${brutoIn.toLocaleString('es-CO')} USD`;
+          `$${brutoIn.toLocaleString('es-CO', { minimumFractionDigits: 2, maximumFractionDigits: 2 })} USD`;
         fila.style.display = 'flex';
       } else {
         fila.style.display = 'none';
@@ -335,10 +302,10 @@
     function resetForm() {
       document.getElementById('costoBruto').value = '';
       document.getElementById('rentabilidad').value = '';
-      document.getElementById('resultados').style.display = 'none';
-      document.getElementById('trmInfo').style.display = 'none';
+      document.getElementById('resultados').style.display     = 'none';
+      document.getElementById('trmInfo').style.display        = 'none';
       document.getElementById('conversionEnVivo').style.display = 'none';
-      document.getElementById('valorConvertido').textContent = '0';
+      document.getElementById('valorConvertido').textContent   = '0,00';
       document.getElementById('tipoMoneda').value = 'COP';
       cambiarMoneda();
     }
